Fiy issue where the background triangle on smartphones wasn’t visible

--- a/modules/rows/_row-triangle.scss
+++ b/modules/rows/_row-triangle.scss
@@ -7,6 +7,7 @@
     margin-top: em(10);
     padding-top: em(170);
     pointer-events: none;
+    z-index: 1;
 }
 
 .row-triangle__content {
@@ -18,6 +19,7 @@
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: -1;
 
     svg {
         @extend %composited-layer; // prevents rendering issue in Safari
@@ -25,7 +27,5 @@
         top: 0;
         left: 56%;
         margin-left: -1075px;
-        z-index: -1;
-
     }
 }
